repaired 26.02